--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,100..700;1,100..700&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Victor+Mono:ital,wght@0,100..700;1,100..700&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 @import "tailwindcss";
 
 
@@ -6,6 +6,7 @@
 @theme {
     --font-madefor: 'Wix Madefor Text', sans-serif;
     --font-victor: 'Victor Mono', monospace;
+    --font-inter: 'Inter', sans-serif;
 }
 
 h2 {
